--- a/index2.html
+++ b/index2.html
@@ -219,6 +219,75 @@
         </div>
     </div>
 </section>
+<section class="content-section white-section">
+    <div class="container content-justify">
+        <div class="col-sm-8 mbnopadding">
+            <div class="col-sm-12 noleftpad">
+                <div class="video-block">
+                    <div class="video-block__img"></div>
+                    <div class="container-user-avatar">
+                        <div class="col-sm-3 avatarplace">
+                            <img src="img/account-icon.png" alt=""/>
+                        </div>
+                    </div>
+                    <div class="body-video-block pagemenu">
+                        <div class="col-sm-3 menuusername">
+                            <h2>James Spiegel</h2>
+                            <span>San Francisco, CA</span>
+                        </div>
+                        <div class="col-sm-9 pagemenulia">
+                            <a href="" id="loadposts" data-toggle="tab" class="navigation__item">
+                                <span data-toggle="tooltip" title="" data-original-title="Посты">
+                                    <div class="postsicon"></div>
+                                </span>
+                            </a>
+                            <a href="" data-toggle="tab" class="navigation__item">
+                                <span data-toggle="tooltip" title="" data-original-title="Статистика">
+                                    <div class="statisticicon"></div>
+                                </span>
+                            </a>
+                            <a href="" data-toggle="tab" class="navigation__item">
+                                <span data-toggle="tooltip" title="" data-original-title="Реклама">
+                                    <div class="advertisers"></div>
+                                </span>
+                            </a>
+                            <a href="" data-toggle="modal" data-target="#messageModal" class="navigation__item">
+                                <span data-toggle="tooltip" title="" data-original-title="Отправить сообщение">
+                                    <div class="sendmesicon"></div>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-content">
+                <div class="col-sm-3 sidebar">
+                    <a data-toggle="tab"><div class="podpis">Подписчиков : <div id="totalfollow">3</div> </div> </a>
+                    <div id="folovadd" class="btn btn-primary" role="button" data-loading-text="Загрузка">Подписаться</div>
+                </div>
+                <div class="tab-content">
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 noleftpad">
+            <aside id="column-right" class="col-sm-12">
+                <header class="ftstr">
+                    <h3 class="mtitleblue">Рекоммендуемые каналы</h3>
+                </header>
+                <div class="col-md-3 columnline">
+                    <a href="">
+                        <div class="col-md-12 showssearch card-aside">
+                            <img src="img/bg-card.jpg" alt=""/>
+                            <span class="playicon"></span>
+                        </div>
+                    </a>
+                </div>
+
+            </aside>
+        </div>
+    </div>
+</section>
 
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="bootstrap_4.1.3/js/bootstrap.bundle.js"></script>
