--- a/index2.html
+++ b/index2.html
@@ -235,6 +235,23 @@
                             <h2>James Spiegel</h2>
                             <span>San Francisco, CA</span>
                         </div>
+                         <ul class="list-option-tab">
+                            <li class="item-tab">
+                                <a hre="" class="link-tab">Следить</a>
+                            </li>
+                            <li class="item-tab">
+                                <a hre="" class="link-tab">Подписаться</a>
+                            </li>
+                            <li class="item-tab">
+                                <a hre="" class="link-tab">Статистика </a>
+                            </li>
+                            <li class="item-tab">
+                                <a hre="" class="link-tab">Реклама</a>
+                            </li>
+                             <li class="item-tab">
+                                <a  class="link-tab dots-tab"></a>
+                            </li>
+                        </ul>
                         <div class="col-sm-9 pagemenulia">
                             <a href="" id="loadposts" data-toggle="tab" class="navigation__item">
                                 <span data-toggle="tooltip" title="" data-original-title="Посты">
@@ -262,28 +279,273 @@
             </div>
             <div class="bottom-content">
                 <div class="col-sm-3 sidebar">
-                    <a data-toggle="tab"><div class="podpis">Подписчиков : <div id="totalfollow">3</div> </div> </a>
-                    <div id="folovadd" class="btn btn-primary" role="button" data-loading-text="Загрузка">Подписаться</div>
+                    <div class="header-sidebar">
+                        <h3 class="title-sidebar">Profile Intro</h3>
+                        <button class="more-info"></button>
+                    </div>
+                    <div class="block-sidebar">
+                         <a data-toggle="tab"><div class="podpis">Подписчиков : <div id="totalfollow">3</div> </div> </a>
+                    <div id="folovadd" class="btn btn-primary follow-add" role="button" data-loading-text="Загрузка">Подписаться</div>
+                    </div>
                 </div>
                 <div class="tab-content">
-
+                    <div class="col-sm-8 center-profile-block">
+                        <header class="header-profile">
+                            <div class="wrapper-user-profile">
+                                <div class="user-icon-profile">
+                                    <img src="img/user-profile.png" alt=""/>
+                                </div>
+                                <div class="title-user-profile">
+                                    <h3>James Spiegel</h3>
+                                    <span class="hours-visit">19 hours ago</span>
+                                </div>
+                            </div>
+                            <button type="button" class="more-info"></button>
+                        </header>
+                        <div class="body-user-profile">
+                            <p class="info-text-profile">Yes I did! Every Saturday! Rap Attack, Mr. Magic, Marley Marl. I even let my tape rock 'til my tape popped. Smokin' weed and bamboo, sippin' on private stock.  But this was way back, when I had the red and black lumberjack with the hat to match.</p>
+                            <p class="info-text-profile">Yes I did! Every Saturday! Rap Attack, Mr. Magic, Marley Marl. I even let my tape rock 'til my tape popped. Smokin' weed and bamboo, sippin' on private stock.  But this was way back, when I had the red and black lumberjack with the hat to match.</p>
+                            <div class="button-body-user">
+                                <ul class="list-body-user">
+                                    <li class="item-body-user">
+                                        <a href="" class="like-user"></a>
+                                    </li>
+                                    <li class="item-body-user">
+                                        <a href="" class="question-user"></a>
+                                    </li>
+                                    <li class="item-body-user">
+                                        <a href="" class="rechange"></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="footer-user-profile">
+                            <div class="container-users-list">
+                                <div class="user-like-profile-block">
+                                    <button type="button" class="like-heart"></button>
+                                    <span>8</span>
+                                </div>
+                                <div class="container-list-all-user">
+                                    <ul class="all-user-list">
+                                        <li class="item-all-user">
+                                            <a href="">
+                                                <img src="img/like-icon.png" class="icon-like-user" alt=""/>
+                                            </a>
+                                        </li>
+                                        <li class="item-all-user">
+                                            <a href="">
+                                                <img src="img/like-icon.png" class="icon-like-user" alt=""/>
+                                            </a>
+                                        </li>
+                                        <li class="item-all-user">
+                                            <a href="">
+                                                <img src="img/like-icon.png" class="icon-like-user" alt=""/>
+                                            </a>
+                                        </li>
+                                        <li class="item-all-user">
+                                            <a href="">
+                                                <img src="img/like-icon.png" class="icon-like-user" alt=""/>
+                                            </a>
+                                        </li>
+                                        <li class="item-all-user">
+                                            <a href="">
+                                                <img src="img/like-icon.png" class="icon-like-user" alt=""/>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div class="list-all-user-title-container">
+                                        <span class="comment-like">Jenny</span>,
+                                        <span class="comment-like">Robert</span>
+                                        <span>and 6 more likes this</span>
+                                    </div>
+                                </div>
+                            </div>
+                              <div class="right-block-user-profile">
+                                <div class="comment-visit-user">
+                                        <span class="comments-span">17</span>
+                                    </div>
+                                    <div class="rechange-visit-user">
+                                        <span class="rechange-span">24</span>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-4 noleftpad">
             <aside id="column-right" class="col-sm-12">
                 <header class="ftstr">
-                    <h3 class="mtitleblue">Рекоммендуемые каналы</h3>
+                    <h3 class="title-sidebar mtitleblue">Рекоммендуемые каналы</h3>
                 </header>
-                <div class="col-md-3 columnline">
-                    <a href="">
-                        <div class="col-md-12 showssearch card-aside">
-                            <img src="img/bg-card.jpg" alt=""/>
-                            <span class="playicon"></span>
-                        </div>
-                    </a>
+                <div class="columnline">
+                     <ul class="showssearch-list">
+                        <li class="container-showssearch small-card-video">
+                            <div class="showssearch">
+                                <div class="header-video">
+                                    <h3 class="title-video">Game show</h3>
+                                    <div class="video-active">
+                                        <span class="icon-video-span"></span>
+                                    </div>
+                                </div>
+                                <div class="container-img-card">
+                                    <img src="img/bg-card.jpg" class="film-item" alt=""/> 
+                                    <span class="playicon"></span>
+                                </div>
+                                <div class="svdata">
+                                    <ul class="footer-data-list">
+                                        <li class="item-video">
+                                            <span class="video-option comments-item">32</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option whatch-item">1245</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option clock-item">Yesterday</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="dsblock">
+                                <div class="smdescription">
+                                    <div class="dsimg">
+                                        <img src="img/logo-video.png" alt=""/>
+                                    </div>
+                                </div>
+                                <div class="dstext">
+                                    <h4 class="sldline">Hunting Luna's Howl and other stu</h4>
+                                    <div class="wrapper-small-text">
+                                         <span class="sldescrripttext">summit1g</span>
+                                         <span class="sldescrripttext">Destiny 2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                         <li class="container-showssearch  small-card-video">
+                            <div class="showssearch">
+                                <div class="header-video">
+                                    <h3 class="title-video">Game show</h3>
+                                    <div class="video-active">
+                                        <span class="icon-video-span"></span>
+                                    </div>
+                                </div>
+                                <div class="container-img-card">
+                                    <img src="img/bg-card.jpg" class="film-item" alt=""/> 
+                                    <span class="playicon"></span>
+                                </div>
+                                <div class="svdata">
+                                    <ul class="footer-data-list">
+                                        <li class="item-video">
+                                            <span class="video-option comments-item">32</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option whatch-item">1245</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option clock-item">Yesterday</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="dsblock">
+                                <div class="smdescription">
+                                    <div class="dsimg">
+                                        <img src="img/logo-video.png" alt=""/>
+                                    </div>
+                                </div>
+                                <div class="dstext">
+                                    <h4 class="sldline">Hunting Luna's Howl and other stu</h4>
+                                    <div class="wrapper-small-text">
+                                         <span class="sldescrripttext">summit1g</span>
+                                         <span class="sldescrripttext">Destiny 2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                         <li class="container-showssearch  small-card-video">
+                            <div class="showssearch">
+                                <div class="header-video">
+                                    <h3 class="title-video">Game show</h3>
+                                    <div class="video-active">
+                                        <span class="icon-video-span"></span>
+                                    </div>
+                                </div>
+                                <div class="container-img-card">
+                                    <img src="img/bg-card.jpg" class="film-item" alt=""/> 
+                                    <span class="playicon"></span>
+                                </div>
+                                <div class="svdata">
+                                    <ul class="footer-data-list">
+                                        <li class="item-video">
+                                            <span class="video-option comments-item">32</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option whatch-item">1245</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option clock-item">Yesterday</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="dsblock">
+                                <div class="smdescription">
+                                    <div class="dsimg">
+                                        <img src="img/logo-video.png" alt=""/>
+                                    </div>
+                                </div>
+                                <div class="dstext">
+                                    <h4 class="sldline">Hunting Luna's Howl and other stu</h4>
+                                    <div class="wrapper-small-text">
+                                         <span class="sldescrripttext">summit1g</span>
+                                         <span class="sldescrripttext">Destiny 2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                         <li class="container-showssearch  small-card-video">
+                            <div class="showssearch">
+                                <div class="header-video">
+                                    <h3 class="title-video">Game show</h3>
+                                    <div class="video-active">
+                                        <span class="icon-video-span"></span>
+                                    </div>
+                                </div>
+                                <div class="container-img-card">
+                                    <img src="img/bg-card.jpg" class="film-item" alt=""/> 
+                                    <span class="playicon"></span>
+                                </div>
+                                <div class="svdata">
+                                    <ul class="footer-data-list">
+                                        <li class="item-video">
+                                            <span class="video-option comments-item">32</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option whatch-item">1245</span>
+                                        </li>
+                                         <li class="item-video">
+                                            <span class="video-option clock-item">Yesterday</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="dsblock">
+                                <div class="smdescription">
+                                    <div class="dsimg">
+                                        <img src="img/logo-video.png" alt=""/>
+                                    </div>
+                                </div>
+                                <div class="dstext">
+                                    <h4 class="sldline">Hunting Luna's Howl and other stu</h4>
+                                    <div class="wrapper-small-text">
+                                         <span class="sldescrripttext">summit1g</span>
+                                         <span class="sldescrripttext">Destiny 2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-
             </aside>
         </div>
     </div>
