--- a/index2.html
+++ b/index2.html
@@ -373,7 +373,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4 noleftpad">
+        <div class="col-sm-4 noleftpad aside-right">
             <aside id="column-right" class="col-sm-12">
                 <header class="ftstr">
                     <h3 class="title-sidebar mtitleblue">Рекоммендуемые каналы</h3>
