--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="poster-btn poster-prev-btn"></div>
             <ul class="poster-list"> 
                 <li class="poster-item">
-                  <a href="index2.html">
+                  <a href="#">
                     <img src="img/1.jpg" alt="" width="100%"/>
                       <span class="playicon"></span>
                  </a>
@@ -152,7 +152,7 @@
                     </div>
                 </li>
                 <li class="poster-item">
-                    <a href="index2.html"><img src="img/2.jpg" alt="" width="100%" />
+                    <a href="#"><img src="img/2.jpg" alt="" width="100%" />
                         <span class="playicon"></span>
                     </a>
                     <div class="nopadding slbottomblock">
@@ -188,7 +188,7 @@
                     </div>
                 </li>
                 <li class="poster-item">
-                    <a href="index2.html"><img src="img/3.jpg" alt="" width="100%" />
+                    <a href="#"><img src="img/3.jpg" alt="" width="100%" />
                         <span class="playicon"></span>
                     </a>
                     <div class="nopadding slbottomblock">
@@ -224,7 +224,7 @@
                     </div>
                 </li>
                 <li class="poster-item">
-                    <a href="index2.html"><img src="img/4.jpg" alt="" width="100%" />
+                    <a href="#"><img src="img/4.jpg" alt="" width="100%" />
                         <span class="playicon"></span>
                     </a>
                     <div class="nopadding slbottomblock">
@@ -260,7 +260,7 @@
                     </div>
                 </li>
                 <li class="poster-item">
-                    <a href="index2.html"><img src="img/5.jpg" alt="" width="100%" />
+                    <a href="#"><img src="img/5.jpg" alt="" width="100%" />
                         <span class="playicon"></span>
                     </a>
                     <div class="nopadding slbottomblock">
