--- a/index2.html
+++ b/index2.html
@@ -131,7 +131,7 @@
                         </ul>
                     </div>
                 </div>
-                <img src="img/video-img.jpg" alt=""/>
+                <img src="img/video-img.jpg" class="big-video" alt=""/>
                 <form class="chat-container">
                     <div class="header-chat">
                         <div class="typing-user">
