--- a/index2.html
+++ b/index2.html
@@ -94,7 +94,7 @@
 <!--------------------------start-content------------------>
 
 <section class="content-section top-section padding-top-30">
-    <div class="container carousel-container">
+    <div class="container big-video-container">
         <header class="header-section">
             <h2 class="homeslidertittle">Новинки</h2>
         </header>
