--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
         <div class="wrapper-header-left-content">
             <div class="header__logo">
                 <a href="" class="flex a-i-c">
-                    <img src="img/logo-img.png" alt="logo"/>
+                    <img src="img/big-city.png" alt="logo"/>
                 </a>
             </div>
             <div class="header__buttons">
